--- a/workshop.html
+++ b/workshop.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Meu primeiro repositório</h1>
-    <h2>Meu segundo repositório</h2>
+    <h2>Meu segundo commit</h2>
 </body>
 </html>
